k8s-hello.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-service
  ports:
  - protocol: TCP
    port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
      - name: hello-service
        image: gitlab-registry.imt-atlantique.fr/devops-lab/shared/hello:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
